Remove wrapping and fix call to action section

--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ a {
 
 .section-one {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   gap: 80px;
 }
@@ -140,6 +139,7 @@ figcaption {
   display: flex;
   flex-direction: column;
   background-color: #e5e7eb;
+  gap: 20px;
 }
 
 .quote {
@@ -173,7 +173,7 @@ figcaption {
   background-color: #3882f6;
   justify-content: space-around;
   flex-wrap: wrap;
-  gap: ;
+  gap: 20px;
 }
 
 .sf-text {
